# Q_Alpha_Research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: hedge_paper.yml
data/: forward_study_books.json  forward_study_ledger.json  forward_study_state.json  forward_study_track.csv  fragility_panel.csv  hedge_alert_state.json  hedge_paper_track.csv  nifty100_watchlist.csv  nifty50_nifbees_close.csv
deploy/: DEPLOY_STREAMLIT_HEDGE.md
reports/: PREREGISTRATION_forward_study.md  PREREGISTRATION_qubo_lowturnover.md  PREREGISTRATION_qubo_universe.md  ai_brief.md  forward_study_dashboard.md  fragility_gauge_validation.md  hedge_book_findings.md  hedge_crashes_findings.md  hedge_findings.md  hedge_paper_dashboard.md  hedge_robustness_findings.md  holding_period_findings.md  lppls_nifty_confidence.csv  lppls_nifty_findings.md  puts_findings.md  quantum_benchmark.md  qubo_lowturnover_findings.md  qubo_quantum_findings.md  qubo_universe_findings.md  riskstate_nifty_findings.md
scripts/: ai_brief.py  build_fragility_dataset.py  exp_hedge.py  exp_hedge_book.py  exp_hedge_crashes.py  exp_hedge_robustness.py  exp_holding_period.py  exp_puts.py  exp_qubo_lowturnover.py  exp_qubo_quantum.py  exp_qubo_universe.py  exp_riskstate.py  forward_study.py  hedge_dashboard_app.py  hedge_paper.py  mission_control_app.py  quantum_benchmark.py  quantum_demo.py  run_lppls_nifty.py  system_check.py  validate_fragility.py
src/qalpha_research/: __init__.py  ai_brief.py  forward_study.py  notify.py  system_check.py
src/qalpha_research/quantum/: __init__.py  qaoa.py  qubo.py  solvers.py
src/qalpha_research/regime/: PREREGISTRATION.md  PREREGISTRATION_riskstate.md  PREREGISTRATION_robustness.md  PREREGISTRATION_systemic.md  __init__.py  fragility.py  hedge.py  hedge_paper.py  hedge_readout.py  lppls.py  options.py  overlay_backtest.py  risk_state.py
tests/: test_ai_brief.py  test_forward_study.py  test_fragility.py  test_hedge.py  test_hedge_alert.py  test_hedge_paper.py  test_hedge_readout.py  test_lppls.py  test_options.py  test_qaoa.py  test_qubo.py  test_risk_state.py  test_system_check.py
