[project]
name = "qalpha-research"
version = "0.1.0"
description = "Q-Alpha research track — quantum (QUBO/QAOA), regime/bubble detection, agentic news/sentiment. Imports the validated qalpha engine; production never imports from here."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    # Gaussian HMM for the regime/risk-state track. Used (not reimplemented) so the signal is the
    # model working, not a hand-rolled Baum-Welch bug; validated by a synthetic-recovery test.
    "hmmlearn>=0.3",
    # The validated product engine. Imported (never copied) so every research claim is checked
    # against the exact same tax-aware FIFO/cost/backtest code that trades. Source pinned below.
    "qalpha",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pandas-stubs>=2.2",
    "types-pyyaml",
]
# Forward hedge paper-run dashboard (regime/hedge_paper.py). UI-only; not needed by CI or the cron.
# Install with `uv sync --extra dashboard`. yfinance powers the daily panel refresh.
dashboard = [
    "streamlit>=1.37",
    "yfinance>=0.2",
]
# Daily AI market brief (scripts/ai_brief.py) — an LLM *narrative* layer, context-only/never a signal.
# Google Gemini free tier + built-in Google Search grounding. Lazy-imported, so the pure helpers +
# their tests need neither the dep nor a network. Install with `uv sync --extra ai`.
ai = [
    "google-genai>=1.0",
]
# Quantum track (Q_alpha.md §15): heavy + AUM-gated. Install with `uv sync --extra quantum`.
# The QAOA tests skip without it; the QUBO/exact/SA tests run on numpy alone.
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "qiskit-algorithms>=0.3",
    "qiskit-optimization>=0.6",
]

# Resolve `qalpha` from the sibling product repo. Default = the GitHub repo (portable, uses your
# gh credentials). For local co-development, override with the editable path form below instead:
#   qalpha = { path = "../qalpha", editable = true }
[tool.uv.sources]
qalpha = { git = "https://github.com/aarsh-adhvaryu/Q_Alpha.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qalpha_research"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/qalpha_research"]
